Fix tag spacing

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -528,3 +528,5 @@ div#content.garden a[href]:not(:where(
 }
 
 div#content.garden a[href^="/404.html"] { text-decoration: underline wavy; }
+
+div#tags:before { content: ' '; }
